--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,30 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <properties>
+		<jdk.version>1.8</jdk.version>
+		<spring.version>5.1.2.RELEASE</spring.version>
+		<junit.version>4.11</junit.version>
+		<log4j.version>1.2.17</log4j.version>
+		<sonar.host.url>http://13.234.122.138:9000/</sonar.host.url>
+		<sonar.login>admin</sonar.login>
+		<sonar.password>admin</sonar.password>
+	</properties>
+  <distributionManagement>
+	
+	    <repository>
+	      <id>nexus</id>
+	      <name>Mithun Technologies Releases Nexus Repository</name>
+	      <url>http://65.2.191.180:8081/repository/maven-RELEASE-repo/</url>
+	    </repository>
+	    
+	    <snapshotRepository>
+	      <id>nexus</id>
+	      <name>Mithun Technologies Snapshot Nexus Repository </name>
+	      <url>http://65.2.191.180:8081/repository/maven-snapshot-repos/</url>
+	    </snapshotRepository>
+	    
+	</distributionManagement>
   <build>
     <finalName>WebApp</finalName>
   </build>
